---
source: src/passes/resolve_names.rs
expression: "test_resolve(\"func a() -> (uint, uint) {}\")"
---
(SymbolTable(
  symbols: [
    Symbol(
      ident: "int",
      kind: TyStruct(Builtin),
    ),
    Symbol(
      ident: "uint",
      kind: TyStruct(Builtin),
    ),
    Symbol(
      ident: "a",
      kind: Function(Ast(Func(
        ident: Resolved(SymbolId(2)),
        ty_params: [],
        params: [],
        ret_ty: Tuple([
          Constructed(
            ident: Resolved(SymbolId(1)),
            params: [],
          ),
          Constructed(
            ident: Resolved(SymbolId(1)),
            params: [],
          ),
        ]),
        body: Block(
          stmts: [],
          final_expr: Unit,
        ),
      ))),
    ),
  ],
  globals: {
    "a": (Global, SymbolId(2)),
    "int": (Builtin, SymbolId(0)),
    "uint": (Builtin, SymbolId(1)),
  },
), "")
